<resources>
    <string name="app_name">ttamre-FeelsBook</string>
    <string name="AppTitle">ttamre-FeelsBook</string>
    <string name="AuthorInfo">ttamre</string>
    <string name="ViewCounts">View Counts</string>
    <string name="ViewHistory">View History</string>
    <string name="Love">Love</string>
    <string name="Joy">Joy</string>
    <string name="Surprise">Surprise</string>
    <string name="Anger">Anger</string>
    <string name="Fear">Fear</string>
    <string name="Sadness">Sadness</string>
    <string name="EnterCommentHere">Enter comment here</string>
    <string name="Submit">Submit</string>
    <string name="EditEmotion">Edit Emotion</string>
    <string name="EnterTime">Enter Time</string>
    <string name="EnterDate">Enter Date</string>
    <string name="DeleteEmotion">Delete Emotion</string>
    <string name="EditTime">Edit Time</string>
    <string name="HHMMSS">HH:MM:SS</string>
</resources>
