<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/fearButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/Fear"
        app:layout_constraintBaseline_toBaselineOf="@+id/sadnessButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sadnessButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Sadness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surpriseButton" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/AppTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/AuthorInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewHistoryButton"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/ViewHistory"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewCountsButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/surpriseButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Surprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveButton" />

    <Button
        android:id="@+id/angerButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/Anger"
        app:layout_constraintBaseline_toBaselineOf="@+id/surpriseButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/viewCountsButton"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/ViewCounts"
        app:layout_constraintBottom_toTopOf="@+id/footerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadnessButton" />

    <Button
        android:id="@+id/loveButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Love"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/joyButton"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/Joy"
        app:layout_constraintBaseline_toBaselineOf="@+id/loveButton"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>